<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/car_animated"
        android:layout_width="wrap_content"
        android:layout_height="234dp"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/ic_car_animated" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/animation_zoom_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="24dp"
                    android:onClick="onClick"
                    android:text="@string/zoom_in"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/animation_zoom_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="40dp"
                    android:onClick="onClick"
                    android:text="@string/zoom_out"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/animation_zoom_in_button" />

                <Button
                    android:id="@+id/animation_left_right_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:onClick="onClick"
                    android:text="@string/left_right"
                    app:layout_constraintStart_toStartOf="@+id/animation_zoom_in_button"
                    app:layout_constraintTop_toBottomOf="@+id/animation_zoom_in_button" />

                <Button
                    android:id="@+id/animation_right_left_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/right_left"
                    app:layout_constraintStart_toStartOf="@+id/animation_zoom_out_button"
                    app:layout_constraintTop_toTopOf="@+id/animation_left_right_button" />

                <Button
                    android:id="@+id/animation_bounce_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:onClick="onClick"
                    android:text="@string/bounce"
                    app:layout_constraintStart_toStartOf="@+id/animation_left_right_button"
                    app:layout_constraintTop_toBottomOf="@+id/animation_left_right_button" />

                <Button
                    android:id="@+id/animation_bottom_top_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/bottom_top"
                    app:layout_constraintStart_toStartOf="@+id/animation_right_left_button"
                    app:layout_constraintTop_toTopOf="@+id/animation_bounce_button" />

                <Button
                    android:id="@+id/animation_fade_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:onClick="onClick"
                    android:text="@string/fade_in"
                    app:layout_constraintStart_toStartOf="@+id/animation_bounce_button"
                    app:layout_constraintTop_toBottomOf="@+id/animation_bounce_button" />

                <Button
                    android:id="@+id/animation_fade_out_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:text="@string/fade_out"
                    app:layout_constraintStart_toStartOf="@+id/animation_bottom_top_button"
                    app:layout_constraintTop_toTopOf="@+id/animation_fade_in_button" />

                <Button
                    android:id="@+id/animation_fade_both_button"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:onClick="onClick"
                    android:text="@string/fade_in_out"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/animation_fade_in_button" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>